--- a/LoginTester/LoginTester.csproj
+++ b/LoginTester/LoginTester.csproj
@@ -13,6 +13,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\App\Controllers\Controllers.csproj" />
+    <ProjectReference Include="..\App\Models\Models.csproj" />
   </ItemGroup>
 
 </Project>
